--- a/Views/Member/Partials/_profileBar_edit.cshtml
+++ b/Views/Member/Partials/_profileBar_edit.cshtml
@@ -117,7 +117,7 @@
 
 <div class="hidden-fields">
     <input type="text" id="dependantid" name="dependantid" value="@Model.dependent.DependantID" hidden />
-    <input type="text" id="programid" name="programid" value="@Model.PopUp.program" hidden />
+    <input type="text" id="programid" name="programid" value="@Model.PopUp.programID" hidden />
     <input type="text" id="program-pop" name="program-pop" value="@Model.PopUp.program_pop_type" hidden />
     <input type="text" id="profile-pop" name="profile-pop" value="@Model.PopUp.profile_pop_type" hidden />
     <input type="text" id="program-check" name="program-check" value="@Model.PopUp.program_pop_checkbox" hidden />
