--- a/Views/Member/patientClinical.cshtml
+++ b/Views/Member/patientClinical.cshtml
@@ -4437,7 +4437,7 @@
                                                                     @Html.DisplayNameFor(model => model.HospitalClaims[0].dischargeDate)
                                                                 </th>
                                                                 <th>
-                                                                    @Html.DisplayNameFor(model => model.HospitalClaims[0].icd10)
+                                                                    @Html.DisplayNameFor(model => model.HospitalClaims[0].finalDiagnosis)
                                                                 </th>
                                                                 <th>
                                                                     @Html.DisplayNameFor(model => model.HospitalClaims[0].procedureCode)
@@ -4465,7 +4465,7 @@
                                                                             @Html.DisplayFor(modelItem => item.dischargeDate)
                                                                         </td>
                                                                         <td>
-                                                                            @Html.DisplayFor(modelItem => item.icd10)
+                                                                            @Html.DisplayFor(modelItem => item.finalDiagnosis)
                                                                         </td>
                                                                         <td>
                                                                             @Html.DisplayFor(modelItem => item.procedureCode)
