--- a/Views/Shared/_LayoutNavigation.cshtml
+++ b/Views/Shared/_LayoutNavigation.cshtml
@@ -270,7 +270,7 @@
 
                                 <ul class="nav navbar-nav navbar-right">
                                     <li>
-                                        @Html.Label(null,"Membership No.", "Membership No.", htmlAttributes: new { @class = "control-label" })
+                                        @Html.Label(null,"Membership No.", htmlAttributes: new { @class = "control-label" })
                                         @Html.TextBox("SearchVar", "", null, new { htmlAttributes = new { @class = "form-control-memberSearch" } })
                                         <div class="spyGlass">
                                             <input type="image" src="~/Content/Images/memberProfile/Search.png" alt="Submit" value="Search">
