--- a/Views/Template/Create_EmailTemplates.cshtml
+++ b/Views/Template/Create_EmailTemplates.cshtml
@@ -1,5 +1,6 @@
 ﻿@model HaloCareCore.Models.Communications.EmailTemplates
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutNavigation.cshtml";
