--- a/Views/CaseManager/AddCaseManagerToProfile.cshtml
+++ b/Views/CaseManager/AddCaseManagerToProfile.cshtml
@@ -81,7 +81,7 @@
         <hr class="fancyruler">
 
         <div class="col-md-12 row"><div class="heading-spacer"></div></div>
-        @using (Ajax.BeginForm("AddCaseManagerToProfile", "CaseManager", new AjaxOptions { HttpMethod = "POST" }, new { id = "add-case-manager" }))
+        @using (Html.AjaxBeginForm("AddCaseManagerToProfile", "CaseManager", new AjaxOptions { HttpMethod = "POST" }, new { id = "add-case-manager" }))
         {
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.Hidden("DependantID", (object)ViewBag.DependantID)
