--- a/Views/Clinical/_AllocateCaseManager.cshtml
+++ b/Views/Clinical/_AllocateCaseManager.cshtml
@@ -83,7 +83,7 @@
 </javascript>
 
 <div class="modal-content-mental-health" style="margin-top: 0%;">
-    @using (Ajax.BeginForm("_AllocateCaseManager", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "casemanager-assignment" }))
+    @using (Html.AjaxBeginForm("_AllocateCaseManager", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "casemanager-assignment" }))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("taskId", (object)ViewBag.task)
