--- a/Views/Clinical/_BipolarQuestionnaire.cshtml
+++ b/Views/Clinical/_BipolarQuestionnaire.cshtml
@@ -135,7 +135,7 @@
 </style>
 
 <div class="modal-content-mental-health" style="margin-top: 0%;">
-    @using (Ajax.BeginForm("_BipolarQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "bipolar-assignment" }))
+    @using (Html.AjaxBeginForm("_BipolarQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "bipolar-assignment" }))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("taskId", (object)ViewBag.task)
