--- a/Views/Clinical/_ChangeStatus.cshtml
+++ b/Views/Clinical/_ChangeStatus.cshtml
@@ -154,7 +154,7 @@
 </javascript>
 
 <div class="modal-content-mental-health" style="margin-top: 0%;">
-    @using (Ajax.BeginForm("_ChangeStatus", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath" }, new { id = "ManagementStatus" }))
+    @using (Html.AjaxBeginForm("_ChangeStatus", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath" }, new { id = "ManagementStatus" }))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("taskId", (object)ViewBag.task)
