--- a/Views/Clinical/_DSM5Questionnaire.cshtml
+++ b/Views/Clinical/_DSM5Questionnaire.cshtml
@@ -172,7 +172,7 @@
 </style>
 
 <div class="modal-content-mental-health" style="margin-top: 0%;">
-    @using (Ajax.BeginForm("_DSM5Questionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "dsm5" }))
+    @using (Html.AjaxBeginForm("_DSM5Questionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "dsm5" }))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("taskId", (object)ViewBag.task)
