--- a/Views/Clinical/_DiabetesQuestionnaire.cshtml
+++ b/Views/Clinical/_DiabetesQuestionnaire.cshtml
@@ -117,7 +117,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <div class="doctorQuestionnaire_Modal">
-    @using (Ajax.BeginForm("_DiabetesQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }))
+    @using (Html.AjaxBeginForm("_DiabetesQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }))
     {
 
         @Html.Hidden("taskId", (object)ViewBag.task)
