--- a/Views/Clinical/_DoctorReferral.cshtml
+++ b/Views/Clinical/_DoctorReferral.cshtml
@@ -85,7 +85,7 @@
 </style>
 
 <div class="modal-content-mental-health" style="margin-top: 0%;">
-    @using (Ajax.BeginForm("_DoctorReferral", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "dr-referral-assignment" }))
+    @using (Html.AjaxBeginForm("_DoctorReferral", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "dr-referral-assignment" }))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("taskId", (object)ViewBag.task)
