--- a/Views/Clinical/_QuestionnaireInsert.cshtml
+++ b/Views/Clinical/_QuestionnaireInsert.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="doctorQuestionnaire_Modal">
-    @using (Ajax.BeginForm("_DoctorQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }))
+    @using (Html.AjaxBeginForm("_DoctorQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }))
     {
         @Html.Hidden("taskId", (object)ViewBag.task)
         @Html.Hidden("DependantID", (object)ViewBag.DependantID)
