--- a/Views/Clinical/_SchizophreniaQuestionnaire.cshtml
+++ b/Views/Clinical/_SchizophreniaQuestionnaire.cshtml
@@ -135,7 +135,7 @@
 </style>
 
 <div class="modal-content-mental-health" style="margin-top: 0%;">
-    @using (Ajax.BeginForm("_SchizophreniaQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "schizophrenia" }))
+    @using (Html.AjaxBeginForm("_SchizophreniaQuestionnaire", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "schizophrenia" }))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("taskId", (object)ViewBag.task)
