--- a/Views/Member/MH_Bipolar_Create.cshtml
+++ b/Views/Member/MH_Bipolar_Create.cshtml
@@ -167,7 +167,7 @@
 
     <div id="bipolar-panel" class="patientDashboard_container">
         <div class="col-md-12 row"><div class="heading-spacer"></div></div>
-        @using (Ajax.BeginForm("MH_Bipolar_Create", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "bipolar-create" }))
+        @using (Html.AjaxBeginForm("MH_Bipolar_Create", "Clinical", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "bipolar-create" }))
         {
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.Hidden("taskId", (object)ViewBag.task)
