--- a/Views/Member/MH_Diagnosis_Create.cshtml
+++ b/Views/Member/MH_Diagnosis_Create.cshtml
@@ -118,7 +118,7 @@
         <h4 class="tableHeading">Add diagnosis</h4>
         <hr class="fancyruler">
         <br />
-        @using (Ajax.BeginForm("MH_Diagnosis_Create", "Member", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "diagnosis-create" }))
+        @using (Html.AjaxBeginForm("MH_Diagnosis_Create", "Member", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "divPath", OnSuccess = "hideModal(); alert('Saved');" }, new { id = "diagnosis-create" }))
         {
             @Html.AntiForgeryToken()
 
