--- a/Views/PatientManagement/EditQuery.cshtml
+++ b/Views/PatientManagement/EditQuery.cshtml
@@ -1,5 +1,6 @@
 ﻿@model HaloCareCore.Models.Communications.Queries
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewBag.Title = "EditQuery";
     Layout = "~/Views/Shared/_LayoutNavigation.cshtml";
