--- a/Views/PatientManagement/searchManagement.cshtml
+++ b/Views/PatientManagement/searchManagement.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using HaloCareCore.Extensions
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewBag.Title = "Search";
     Layout = "~/Views/Shared/_LayoutNavigation.cshtml";
