--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -1,4 +1,6 @@
 ﻿@model HaloCareCore.Models.Script.Products
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutNavigation.cshtml";
