--- a/Views/RiskRating/Details.cshtml
+++ b/Views/RiskRating/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@model HaloCareCore.Models.Management.HypoRiskRules
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutNavigation.cshtml";
