--- a/Views/Tasks/Create_AssignmentItem.cshtml
+++ b/Views/Tasks/Create_AssignmentItem.cshtml
@@ -1,5 +1,6 @@
 ﻿@model HaloCareCore.Models.Validation.AssignmentItemTypes
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewBag.Title = "Create_AssignmentItem";
     Layout = "~/Views/Shared/_LayoutNavigation.cshtml";
