--- a/Views/Template/Edit.cshtml
+++ b/Views/Template/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model HaloCareCore.Models.Communications.SmsMessageTemplates
-
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutNavigation.cshtml";
